--- a/lesson6/index.html
+++ b/lesson6/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <ul>
-        <li>Home</li>
+        <!-- <li>Home</li>
         <li>About</li>
         <li>Contact</li>
         <li>Services</li>
-        <li>Blog</li>
+        <li>Blog</li> -->
     </ul>
 
     <script src="./script.js"></script>
